--- a/style/style.css
+++ b/style/style.css
@@ -75,7 +75,7 @@ nav {
     text-align: center;
 }
 /*----main----*/
-main{
+main section{
     margin: 6% 15%;
 }
 /*----Action----*/
@@ -101,7 +101,6 @@ main{
 }
 /*----productive_user----*/
 .productive_user{
-    margin-top: 9%;
     padding: 2% 5%;
     background-color: rgba(78, 71, 255, 0.1);
     border-radius: 2%;
@@ -122,4 +121,35 @@ main{
     margin: 0;
     font-weight: bold;
     font-size: 4em;
+}
+/*----Reviews----*/
+.review-title{
+    font-size: 2.8em;
+    font-weight: bold;
+    text-align: center;
+}
+.reviews{
+    margin-top: 5%;
+    display: flex;
+    gap:2%
+}
+.account{
+    background-color: #ffffff;
+    border-radius: 5%;
+    padding: 1.8%;
+    border: 1px solid hsl(218, 19%, 92%);;
+}
+.star{
+    display: flex;
+}
+.accout-id{
+    display: flex;
+    align-items: center;
+    gap: 2%;
+}
+.avater_image{
+    border-radius: 50%;
+}
+span{
+    font-weight: bold;
 }
