--- a/style/style.css
+++ b/style/style.css
@@ -153,3 +153,24 @@ main section{
 span{
     font-weight: bold;
 }
+
+/*----Ready to focus----*/
+.focus{
+    background-color: #ffffff;
+    padding: 3%;
+    border-radius: 2%;
+    text-align: center;
+}
+.focus-title{
+    font-size: 2.8em;
+    font-weight: bold;
+}
+.focus-des{
+    text-align: center;
+}
+.focus-image{
+    padding: 3% 10% 0% 10%;
+    width: 80%;
+    height: 100%;
+    border-radius: 12%;
+}
